--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,41 @@
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   background-color: #f2f7f1;
 }
 
+.flexed {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 h1 {
   font-weight: 700;
   font-size: 32px;
   color: #1e2c19;
+}
+div.wtool {
+  display: flex;
+  flex-direction: column;
+}
+.wtool span[data-descr] {
+  position: relative;
+  text-decoration: underline;
+  color: #00f;
+  cursor: help;
+}
+
+.wtool span[data-descr]:hover::after,
+.wtool span[data-descr]:focus::after {
+  content: attr(data-descr);
+  position: absolute;
+  left: 0;
+  top: 2.5rem;
+  min-width: 300px;
+  border: 1px #5c6d55 solid;
+  border-radius: 5px;
+  background-color: #567d46;
+  padding: 12px;
+  color: #000000;
+  font-size: 14px;
+  z-index: 1;
 }
